--- a/Frontend/aad_frontend/package.json
+++ b/Frontend/aad_frontend/package.json
@@ -14,10 +14,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@stripe/stripe-js": "^3.0.10",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.3",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
