--- a/Frontend/aad_frontend/package.json
+++ b/Frontend/aad_frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/styles": "^5.15.13",
+    "@mui/x-charts": "^6.19.5",
+    "@mui/x-data-grid": "^6.19.6",
     "@stripe/stripe-js": "^3.0.10",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
@@ -21,6 +25,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.3",
     "swiper": "^11.0.7"
