--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
     "mdbreact": "^5.2.0",
     "react-router-dom": "^6.22.3"
